feat: Added forgot component

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,38 +1,56 @@
-<div class="row">
-    <div class="col-md-6 offset-md-3">
-        <div class="d-flex align-items-center h-75 justify-content-center" style="margin-top: 12rem;">
-    <nb-card class="w-75 mb-0" [nbSpinner]="isLoading">
-        <nb-card-header >
-            <div class="d-flex align-items-center h-100 justify-content-center">
-                <span class="ps-2">
-                    <img [src]="logo" alt="" height="50">
-                </span>
-                <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
-            </div>
-        </nb-card-header>
-        <nb-card-body class="m-2">
-            <form (ngSubmit)="submit()">
-                <div class="mb-3 form-group">
-                    <label for="email" class="label">Email</label>
-                    <nb-form-field>
-                        <nb-icon nbPrefix icon="email-outline"></nb-icon>
-                        <input type="text" class="form-control" nbInput fullWidth shape="rectangle" placeholder="Enter your email"  name="email" [(ngModel)]="email">
-                    </nb-form-field>
-                </div>
-                <div class="row mb-3">
-                    <div class = "col-10"></div>
-                    <div class = "col-2">
-                <a class="float-end"[routerLink]="['../login']">Login</a>
-                </div>
-                </div>
-                <div class="row mb-3">
-                    <div class = "col-12">
-                <button class="w-100" nbButton hero status="primary" type="submit" [disabled]="!email">Send</button>
-            </div>
-        </div>
-            </form>
-        </nb-card-body>
-    </nb-card>
-</div>
-</div>
-</div>
+<h1 id="title" class="title">Forgot Password</h1>
+<p class="sub-title">Enter your email address and we’ll send a link to reset your password</p>
+
+<!-- <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
+  <p class="alert-title"><b>Oh snap!</b></p>
+  <ul class="alert-message-list">
+    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
+  </ul>
+</nb-alert> -->
+
+<!-- <nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
+  <p class="alert-title"><b>Hooray!</b></p>
+  <ul class="alert-message-list">
+    <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
+  </ul>
+</nb-alert> -->
+
+<form (ngSubmit)="submit()" #requestPassForm="ngForm" aria-labelledby="title">
+
+  <div class="form-control-group">
+    <label class="label" for="input-email">Enter your email address:</label>
+    <input nbInput
+           [(ngModel)]="user.email"
+           #email="ngModel"
+           id="input-email"
+           name="email"
+           pattern=".+@.+\..+"
+           placeholder="Email address"
+           autofocus
+           fullWidth
+           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
+           [required]="getConfigValue('forms.validation.email.required')"
+           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
+    <ng-container *ngIf="email.invalid && email.touched">
+      <p class="error-message" *ngIf="email.errors?.required">
+        Email is required!
+      </p>
+      <!-- <p class="error-message" *ngIf="email.errors?.pattern">
+        Email should be the real one!
+      </p> -->
+    </ng-container>
+  </div>
+
+  <button nbButton
+          fullWidth
+          status="success"
+          [disabled]="submitted || !requestPassForm.valid"
+          [class.btn-pulse]="submitted">
+    Request password
+  </button>
+</form>
+
+<section class="sign-in-or-up" aria-label="Sign in or sign up">
+  <p><a class="text-link" routerLink="../login">Back to Log In</a></p>
+  <!-- <p><a routerLink="../register" class="text-link">Register</a></p> -->
+</section>
