--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
 </div>
 <form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title" [nbSpinner]="isLoading">
   <div class="form-control-group">
-    <label class="label" for="input-email">Email address:</label>
+    <label class="label" for="input-email">Email or Username:</label>
     <input nbInput
            fullWidth
            [(ngModel)]="model.username"
