--- a/src/app/shared/components/logout-confimartion/logout-confimartion.component.html
+++ b/src/app/shared/components/logout-confimartion/logout-confimartion.component.html
@@ -1,14 +1,14 @@
 <nb-card class="dialog-card" [nbSpinner]="isLoading">
     <nb-card-header>
-        <h6>Logout</h6>
+        <h6>{{'kLogout' | translate }}</h6>
     </nb-card-header>
     <nb-card-body>
-        <p>Are You sure you want to logout?</p>
+        <p>{{'kAreYouSureYouWantToLogout' | translate }}</p>
     </nb-card-body>
     <nb-card-footer>
         <button nbButton class="appearance-filled size-medium shape-rectangle status-danger"
-            (click)="closeModal()">No</button>
+            (click)="closeModal()">{{'kNo' | translate }}</button>
         <button nbButton class="appearance-filled size-medium shape-rectangle status-primary"
-            (click)="signOut()" >Yes</button>
+            (click)="signOut()" >{{'kYes' | translate }}</button>
     </nb-card-footer>
 </nb-card>
