--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -18,9 +18,10 @@
                     </div>
                 </div>
         </nb-list-item>
-        <nb-list-item class="cursor-pointer" *ngFor="let user of users" [routerLink]="[user?.patientID, 'vitals']">
+        <nb-list-item class="cursor-pointer d-flex justify-content-between" *ngFor="let user of users" [routerLink]="[user?.patientID, 'vitals']">
             <nb-user class="cursor-pointer warning" [ngClass]="{'none': user.monitored == 0,'success': user.alarm == 0 && user.monitored == 1, 'warning': user.alarm == 1 && user.monitored == 1, 'danger': user.alarm == 2 && user.monitored == 1}" [name]="user.name" [title]="user.dob" [picture]="user.imageUrl">
             </nb-user>
+            <nb-icon icon="edit-outline" [options]="{ animation: { type: 'zoom' } }" (click)="addPatient(user?.patientID);$event.stopPropagation();"></nb-icon>
         </nb-list-item>
         <nb-list-item *ngIf="!users?.length">
             <p>No patients found. <a (click)="addPatient()">Create New Patient</a></p>
