--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -48,7 +48,7 @@
             <div >
                 <div for="inputFirstName" class="label">Date Of Birth</div>
                 <input nbInput fullWidth fieldSize="giant" formControlName="dob"
-                    placeholder="Pick Date" [nbDatepicker]="formcontrol" (dateChange) = "selectedDate($event)">
+                    placeholder="Pick Date" [nbDatepicker]="formcontrol">
                 <nb-datepicker #formcontrol></nb-datepicker>
             </div>
             <div >
