--- a/src/app/pages/patients/index/index.component.html
+++ b/src/app/pages/patients/index/index.component.html
@@ -1,8 +1,8 @@
-<div class="row">
-    <div class="col-md-3">
+<div class="row d-flex h-100">
+    <div class="col-md-4">
         <app-patient-list></app-patient-list>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-8">
        <router-outlet></router-outlet>
     </div>
 </div>
