--- a/src/app/pages/patients/filter-dialog/filter-dialog.component.html
+++ b/src/app/pages/patients/filter-dialog/filter-dialog.component.html
@@ -26,7 +26,7 @@
             </div>
         </nb-card-body>
         <nb-card-footer class="d-flex justify-content-end">
-            <button size="small" nbButton status="danger" (click)="ref.close()">Cancel</button>
+            <button size="small" nbButton status="danger" (click)="close()">Cancel</button>
             <button size="small" class="ms-2"nbButton status="success" (click)="startSearch()">Search</button>
         </nb-card-footer>
     </nb-card>
