--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -12,10 +12,15 @@
                 <p *ngSwitchCase="2"> <nb-icon icon="venus-mars"  nbTooltip="Gender" pack="font-awesome"></nb-icon><span class="ps-4">Others</span> </p>
             </div>
             <div class="col-md-6">
-              <p class="text-uppercase"><nb-icon icon="map-marker-alt" pack="font-awesome"></nb-icon> <span class="ps-4">{{patient?.city}}</span>,
-                <span class="ps-1">{{patient?.state}}</span>,
-                <span class="ps-1">{{patient?.country}}</span>
-            </p> 
+                <div class="row mt-3">
+                    <div class="col-auto"><nb-icon icon="map-marker-alt" pack="font-awesome"></nb-icon></div>
+                    <div class="col-auto">
+                            <div>{{patient?.address}}</div>
+                            <div>{{patient?.city}}</div>
+                            <div>{{patient?.state}}</div>
+                            <div>{{patient?.zipcode}}</div>
+                    </div>
+                </div>
             <p><nb-icon icon="person" nbTooltip="Morbidity"></nb-icon><span class="ps-4" *ngFor="let morbidity of morbidityValue" >{{morbidity}}</span></p> 
             </div>
         </div>
