add: format to datepicker

--- a/src/app/pages/patients/filter-dialog/filter-dialog.component.html
+++ b/src/app/pages/patients/filter-dialog/filter-dialog.component.html
@@ -15,7 +15,7 @@
             <div>
                 <input class="mb-3" nbInput fullWidth size="small" formControlName="dob" placeholder="DD/MM/YYYY"
                     [nbDatepicker]="formcontrol">
-                <nb-datepicker #formcontrol format="MM\dd\yyyy"></nb-datepicker>
+                <nb-datepicker #formcontrol format="dd\MM\yyyy"></nb-datepicker>
             </div>
             <div>
                 <nb-button-group size="small" status="primary">
