--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -42,9 +42,9 @@
                     <div class="form-group mb-1">
                         <div for="inputFirstName" class="label"> <span class="text-danger">*</span> Date Of
                             Birth</div>
-                        <input nbInput class="w-100" fieldSize="medium" formControlName="dob" placeholder="Pick Date"
+                        <input nbInput class="w-100" fieldSize="medium" formControlName="dob" placeholder="DD\MM\YYYY"
                             [nbDatepicker]="formcontrol" fullWidth>
-                        <nb-datepicker #formcontrol></nb-datepicker>
+                        <nb-datepicker format="dd\MM\yyyy" #formcontrol></nb-datepicker>
                     </div>
                 </div>
                 <div class="col-md-6">
