fix: build issues

--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -29,7 +29,7 @@
                         [name]="user.name" [title]="user.email" [picture]="user.imageUrl">
                     </nb-user>
                 </nb-list-item>
-                <nb-list-item *ngIf="">
+                <nb-list-item>
                     <h6 class="text-center">No caregivers specified. Tap + to add a caregiver</h6>
                 </nb-list-item>
             </div>
