--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -1,16 +1,21 @@
 <nb-card class="patient-list" [nbSpinner]="isLoading">
     <nb-list>
         <nb-list-item class="justify-content-start">
-            <nb-button-group status="primary" size="small">
-                <button nbButtonToggle nbButton pressed>All</button>
-                <button nbButtonToggle nbButton>Monitored</button>
-            </nb-button-group>
-            <nb-actions size="small">
-                <nb-action icon="funnel-outline" (click)="open(filter)" [options]="{ animation: { type: 'zoom' } }">
-                </nb-action>
-                <nb-action icon="plus-circle-outline" [options]="{ animation: { type: 'zoom' } }"
-                    (click)="addPatient()"></nb-action>
-            </nb-actions>
+            <div class="row">
+                <div class="col-auto pt-3 pb-3 m-auto">
+                    <nb-button-group status="primary" size="tiny">
+                        <button nbButtonToggle nbButton pressed>All</button>
+                        <button nbButtonToggle nbButton>Monitored</button>
+                    </nb-button-group>
+                </div>
+                <div class="col-auto pt-3 pb-3 m-auto">
+                    <nb-actions size="tiny">
+                        <nb-action class="ps-0 pe-0" icon="funnel-outline" (click)="open()">
+                        </nb-action>
+                        <nb-action class="pe-0" icon="plus-circle-outline" (click)="addPatient()"></nb-action>
+                    </nb-actions>
+                </div>
+            </div>
         </nb-list-item>
         <nb-list-item>
             <nb-form-field class="w-100">
@@ -25,8 +30,7 @@
                 [ngClass]="{'none': user.monitored == 0,'success': user.alarm == 0 && user.monitored == 1, 'warning': user.alarm == 1 && user.monitored == 1, 'danger': user.alarm == 2 && user.monitored == 1}"
                 [name]="user.name" [title]="user.dob" [picture]="user.imageUrl">
             </nb-user>
-            <nb-icon icon="edit-outline" [options]="{ animation: { type: 'zoom' } }"
-                (click)="addPatient(user?.patientID);$event.stopPropagation();"></nb-icon>
+            <nb-icon icon="edit-outline" (click)="addPatient(user?.patientID);$event.stopPropagation();"></nb-icon>
         </nb-list-item>
         <nb-list-item *ngIf="!users?.length">
             <p>No patients found. <a (click)="addPatient()">Create New Patient</a></p>
