--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,18 +1,17 @@
 <nb-card [nbSpinner]="isLoading">
     <nb-card-body>
         <div class="row">
-            <div class="col-md-3">
-                <nb-user size="giant" [name]="patientName" [title]="patient?.dob" [picture]="patient?.imageUrl">
+            <div class="col-md-3 mt-3">
+                <nb-user size="giant" [name]="patientName" [picture]="patient?.imageUrl">
                 </nb-user>
             </div>
             <div class="col-md-3" [ngSwitch]="patient?.gender">
                 <p>
-                    <nb-icon icon="phone" pack="font-awesome"></nb-icon><span
-                        class="ps-4">{{patient?.phoneNumber}}</span>
+                    <nb-icon icon="email"></nb-icon><span class="ps-4">{{patient?.email}}</span>
                 </p>
                 <p>
-                    <nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon><span
-                        class="ps-4">{{patient?.dob}}</span>
+                    <nb-icon icon="phone" pack="font-awesome"></nb-icon><span
+                        class="ps-4">{{patient?.phoneNumber}}</span>
                 </p>
                 <p *ngSwitchCase="0">
                     <nb-icon icon="venus-mars" nbTooltip="Gender" pack="font-awesome"></nb-icon><span
@@ -26,20 +25,35 @@
                     <nb-icon icon="venus-mars" nbTooltip="Gender" pack="font-awesome"></nb-icon><span
                         class="ps-4">Others</span>
                 </p>
-                <p><nb-checkbox status="info" [checked]="monitored" (change)="setCheckedStatus($event)">Monitored</nb-checkbox></p>
+                <p>
+                    <nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.dob}}</span>
+                </p>
             </div>
-            <div class="col-md-6">
+            <div class="col-auto">
+                <div class="row mt-3">
+                    <div class="col-auto">
+                        <nb-icon icon="flag" pack="font-awesome"></nb-icon><span
+                        class="ps-4">{{patient?.country}}</span>
+                    </div>
+                </div>
                 <div class="row mt-3">
                     <div class="col-auto"><nb-icon icon="map-marker-alt" pack="font-awesome"></nb-icon></div>
                     <div class="col-auto">
-                            <div>{{patient?.address}}</div>
-                            <div>{{patient?.city}}</div>
-                            <div>{{patient?.state}}</div>
+                            <div>{{patient?.address}}, {{patient?.city}}, {{patient?.state}}</div>
                             <div>{{patient?.zipcode}}</div>
                     </div>
                 </div>
-            <p><nb-icon icon="person" nbTooltip="Morbidity"></nb-icon><span class="ps-4" *ngFor="let morbidity of morbidityValue" >{{morbidity}}</span></p> 
+                <div class="row mt-3">
+                    <div class="col-auto">
+                        <nb-icon icon='globe-outline'></nb-icon>
+                    </div>
+                    <div class="col-auto">{{language?.name}}</div>
+                </div>
+            <p><nb-icon icon="person" nbTooltip="Morbidity"></nb-icon><span class="ps-4" *ngFor="let morbidity of morbidityValue" >{{morbidityValue}}</span></p> 
             
+            </div>
+            <div class="col-auto align-bottom">
+                    <p><nb-checkbox class="profileMonitered" status="info" [checked]="monitored" (change)="setCheckedStatus($event)">Monitored</nb-checkbox></p>
             </div>
         </div>
     </nb-card-body>
