change: datepicker placeholder

--- a/src/app/pages/patients/filter-dialog/filter-dialog.component.html
+++ b/src/app/pages/patients/filter-dialog/filter-dialog.component.html
@@ -13,7 +13,7 @@
                     placeholder="Last Name">
             </div>
             <div>
-                <input class="mb-3" nbInput fullWidth size="small" formControlName="dob" placeholder="DD/MM/YYYY"
+                <input class="mb-3" nbInput fullWidth size="small" formControlName="dob" placeholder="DD\MM\YYYY"
                     [nbDatepicker]="formcontrol">
                 <nb-datepicker #formcontrol format="dd\MM\yyyy"></nb-datepicker>
             </div>
