fix: date formate

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -44,7 +44,7 @@
                             Birth</div>
                         <input nbInput class="w-100" fieldSize="medium" formControlName="dob" placeholder="DD\MM\YYYY"
                             [nbDatepicker]="formcontrol" fullWidth>
-                        <nb-datepicker format="dd\MM\yyyy" #formcontrol></nb-datepicker>
+                        <nb-datepicker #formcontrol></nb-datepicker>
                     </div>
                 </div>
                 <div class="col-md-6">
