fix: add patient datepicket format

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -42,7 +42,7 @@
                     <div class="form-group mb-1">
                         <div for="inputFirstName" class="label"> <span class="text-danger">*</span> Date Of
                             Birth</div>
-                        <input nbInput class="w-100" fieldSize="medium" formControlName="dob" placeholder="DD\MM\YYYY"
+                        <input nbInput class="w-100" fieldSize="medium" formControlName="dob" placeholder="DD/MM/YYYY"
                             [nbDatepicker]="formcontrol" fullWidth>
                         <nb-datepicker #formcontrol></nb-datepicker>
                     </div>
